<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/developer_photo"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/user"
            android:background="@drawable/photo_border"
            android:contentDescription="@string/contacts_photo_desc"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/developer_matricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_matricula"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/developer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_email"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/developer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_phone"
            android:textSize="16sp"
            android:layout_gravity="center" />
    </LinearLayout>
</FrameLayout>